--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,10 @@ SQLAlchemy==1.4.50
 streamlit==1.39.0
 streamlit-aggrid==1.0.5
 streamlit-antd-components==0.3.2
+tavily-python==0.3.3
 tqdm==4.66.4
 transformers==4.46.1
 unstructured==0.16.4
 uvicorn==0.32.0
+python-multipart
+paramiko
